Fri Aug  3 13:12:30 CEST 2012
-----------------------------
        new file:   openjdk/openjdk.SlackBuild
        new file:   xerces/xerces.SlackBuild
        deleted:    jdk/jdk.SlackBuild
        deleted:    jre/jre.SlackBuild

Wed Aug  1 15:56:16 CEST 2012
-----------------------------
        new file:   apache-ant/apache-ant.SlackBuild
        modified:   compat32-libraries/compat32-libraries.SlackBuild
        new file:   rhino/rhino.SlackBuild

Tue Jul 31 10:21:14 CEST 2012
-----------------------------
        new file:   jdk/jdk.SlackBuild
        new file:   jre/jre.SlackBuild

Sun Jul 29 21:23:14 CEST 2012
-----------------------------
        new file:   i7z/i7z.SlackBuild

Tue Jul 24 11:09:00 CEST 2012
-----------------------------
        modified:   amsn/amsn.SlackBuild
        modified:   compat32-libraries/compat32-libraries.SlackBuild
        modified:   farsight2/farsight2.SlackBuild
        modified:   gssdp/gssdp.SlackBuild
        modified:   gupnp-igd/gupnp-igd.SlackBuild
        modified:   gupnp/gupnp.SlackBuild
        modified:   libnice/libnice.SlackBuild
        deleted:    glib-networking/glib-networking.SlackBuild
        deleted:    libgnome-keyring/libgnome-keyring.SlackBuild
        deleted:    libproxy/libproxy.SlackBuild
        deleted:    libsoup/libsoup.SlackBuild
        deleted:    libtasn1/libtasn1.SlackBuild

Fri Jun 29 18:18:45 CEST 2012
-----------------------------
        modified:   GeoIP/GeoIP.SlackBuild
        modified:   aMule/aMule.SlackBuild
        modified:   amsn/amsn.SlackBuild
        modified:   bar/bar.SlackBuild
        modified:   cabextract/cabextract.SlackBuild
        modified:   chromium/chromium.SlackBuild
        modified:   cnijfilter-mp495series/cnijfilter-mp495series.SlackBuild
        modified:   compat32-libraries/compat32-libraries.SlackBuild
        modified:   corkscrew/corkscrew.SlackBuild
        modified:   cryptopp/cryptopp.SlackBuild
        modified:   exif/exif.SlackBuild