@@ -1,0 +1,30 @@
+atk >= 2.4.0-x86_64-1
+bzip2 >= 1.0.6-x86_64-1
+cairo >= 1.10.2-x86_64-2
+cxxlibs >= 6.0.17-x86_64-1 | gcc-g++ >= 4.7.1-x86_64-1
+expat >= 2.0.1-x86_64-2
+fontconfig >= 2.9.0-x86_64-1
+freetype >= 2.4.10-x86_64-1
+gcc >= 4.7.1-x86_64-1
+gdk-pixbuf2 >= 2.26.1-x86_64-1
+glib2 >= 2.32.3-x86_64-1
+glibc-solibs >= 2.15-x86_64-4
+gtk+2 >= 2.24.10-x86_64-1
+libX11 >= 1.5.0-x86_64-1
+libXau >= 1.0.7-x86_64-1
+libXcomposite >= 0.4.3-x86_64-1
+libXcursor >= 1.1.13-x86_64-1
+libXdamage >= 1.1.3-x86_64-1
+libXdmcp >= 1.1.1-x86_64-1
+libXext >= 1.3.1-x86_64-1
+libXfixes >= 5.0-x86_64-1
+libXi >= 1.6.1-x86_64-1
+libXinerama >= 1.1.2-x86_64-1
+libXrandr >= 1.3.2-x86_64-1
+libXrender >= 0.9.7-x86_64-1
+libffi >= 3.0.11-x86_64-1
+libpng >= 1.4.12-x86_64-1
+libxcb >= 1.8.1-x86_64-1
+pango >= 1.30.1-x86_64-1
+pixman >= 0.26.2-x86_64-1
+zlib >= 1.2.6-x86_64-1
